* changed implementation of gamma and related functions (using boost.math now)
* syntax: so-called parametrized-functions spline[] and interpolate[]
  are replaced by so-called variadic functions Spline() and Polyline().
  The GUI in the Baseline Mode handles a separate baseline for each dataset now.
* abandoned syntax like 5<x<10, use 5<x and x<10

User-visible changes in version 0.9.2  (2010-05-07):
* To compile fityk, Boost (only headers) and xylib must be installed first.
  Fityk tarball does not contain a copy of boost and xylib now.
* user-defined functions: split functions can be defined in this way:
  SplitG(h, c, w1, w2) = x < c ? Gaussian(h, c, w1) : Gaussian(h, c, w2)
* added info-numeric-format option
* a couple of bug fixes


User-visible changes in version 0.9.1  (2010-03-25):
* added cfityk to Windows installer
* Unix only: fitting can be interrupted by the INT signal
* changed output of "info errors", see the manual for details
* GUI: "plot in @n" changes selected datasets (useful in scripts)
* many bugs fixed

User-visible changes in version 0.9.0  (2010-01-05):
* GUI: Data > Editor dialog was replaced with two dialogs: Data > Table
  and Data > Edit Transformations
* added Lua bindings (configure option --enable-lua)
* a syntax to execute output from external program: command ! program [args...]
* xyConvert (which requires wx 2.9) is built by default.
  Added flag --disable-xyconvert, which must be used with wx 2.8.
* parsing of info command was rewritten, but functionality is almost the same
* bug fixes

User-visible changes in version 0.8.9  (2009-08-20):
* manual was converted from DocBook to reStructuredText
* GUI: On Linux fitting was very slow, this was fixed. A new option
  `refresh-period` was added to control refreshing during fitting.
* define supports variable substitution with "define ... where ...", e.g. 
   define Foo(alpha) = alpha * eta * (eta / tanh(eta) - ln (2*sinh(eta))) \