@@ -100,10 +100,7 @@ protected:
     std::string get_or_make_variable(std::string const& func);
     Variable *create_variable(std::string const &name, std::string const &rhs);
     std::string put_into_variables(Variable* new_var);
-    bool is_variable_referred(int i,
-                              std::vector<std::string> const &ignore_vars
-                                                 =std::vector<std::string>(),
-                              std::string *first_referrer=0);
+    bool is_variable_referred(int i, std::string *first_referrer = NULL);
     std::vector<std::string> get_vars_from_kw(std::string const &function,
                                          std::vector<std::string> const &vars);
     std::string make_var_copy_name(Variable const* v);
